# sphinx-termynal

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-docs.yml  publish.yml  test.yml
_sources/: index.md
docs/source/: conf.py  index.md  index.rst
src/sphinx_termynal/: __init__.py  termynal.py
src/sphinx_termynal/static/: termynal.js
tests/: test_sphinx_termynal.py
