[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-termynal"
dynamic = ["version"]
description = "Animated terminal window for Sphinx"
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["sphinx"]

[project.urls]
homepage = "https://sphinx-termynal.prajeeshag.com"
repository = "https://github.com/prajeeshag/sphinx-termynal"
documentation = "https://sphinx-termynal.prajeeshag.com"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.setuptools.package-data]
"sphinx_termynal" = ["static/*"]

[tool.commitizen]
name = "cz_gitmoji"
